# scholarships_by_ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
crawler/: Dockerfile
crawler/ingest/: main.py  pyproject.toml
